# Terminal-Based-Task-List

./: README.md  Terminal-Based-Task-List.py  pyproject.toml
Terminal-Based-Task-List/: pyproject.toml
Terminal-Based-Task-List/src/: Terminal-Based-Task-List.py
